[package]
name = "paproxy"
version = "0.3.3"
edition = "2021"
authors = ["Ilya Volchenkov <lzhepelmen@gmail.com>"]
repository = "https://github.com/zryambus/paproxy"
license-file = "LICENSE"

[dependencies]
axum = { version = "=0.8.4", features = ["ws"] }
anyhow = "=1.0.99"
tokio = { version = "=1.47.1", features = ["full"] }
hyper = { version = "=1.7.0", features = ["full"] }
hyper-util = "=0.1.16"
tower-http = { version = "=0.6.6", features = ["fs", "cors", "trace"] }
hyper-rustls = "=0.27.7"
rustls = { version = "=0.23.31", features = ["tls12"] }
http-body-util = "=0.1.3"
bytes = "=1.10.1"
tokio-tungstenite = { version = "=0.27.0", features = ["__rustls-tls"] }
url = "=2.5.7"
futures-util = "=0.3.31"
config = { version = "=0.15.14", features = ["yaml"] }
serde_derive = "=1.0.219"
serde = "=1.0.219"
tracing = "=0.1.41"
tracing-subscriber = "=0.3.19"
http = "=1.3.1"
clap = { version = "=4.5.46", features = ["derive"] }

[[bin]]
name = "paproxy"
path = "src/main.rs"