[package]
name = "paproxy"
version = "0.4.1"
edition = "2024"
authors = ["Ilya Volchenkov <lzhepelmen@gmail.com>"]
repository = "https://github.com/zryambus/paproxy"
license-file = "LICENSE"

[dependencies]
axum = { version = "=0.8.8", features = ["ws"] }
anyhow = "=1.0.100"
tokio = { version = "=1.49.0", features = ["full"] }
hyper = { version = "=1.8.1", features = ["full"] }
hyper-util = "=0.1.19"
tower-http = { version = "=0.6.8", features = ["fs", "cors", "trace"] }
hyper-rustls = "=0.27.7"
rustls = { version = "=0.23.36", features = ["tls12"] }
http-body-util = "=0.1.3"
bytes = "=1.11.0"
tokio-tungstenite = { version = "=0.28.0", features = ["__rustls-tls"] }
url = "=2.5.8"
futures-util = "=0.3.31"
config = { version = "=0.15.19", features = ["yaml"] }
serde_derive = "=1.0.228"
serde = "=1.0.228"
tracing = "=0.1.44"
tracing-subscriber = "=0.3.22"
http = "=1.4.0"
clap = { version = "=4.5.54", features = ["derive"] }
crossterm = { version = "=0.29.0", features = ["event-stream"] }
dashmap = "=6.1.0"
futures = "=0.3.31"
human_bytes = "=0.4.3"
ratatui = { version = "=0.30.0", features = ["serde"] }
tui-logger = { version = "=0.18.0", features = ["tracing-support"] }
tokio-util = "=0.7.18"
signal-hook = "=0.4.1"

[[bin]]
name = "paproxy"
path = "src/main.rs"
